# colcon-meson

./: README.md  publish-python.yaml  setup.cfg  stdeb.cfg
.github/workflows/: ci.yml
colcon_meson/: build.py  identification.py
test/: spell_check.words  test_flake8.py
test/meson_test_project/: meson.build  meson_test_project.c
