[metadata]
name = colcon-meson
project_urls =
    GitHub = https://github.com/colcon/colcon-meson/
author = Christian Rauch
author_email = Rauch.Christian@gmx.de
license = Apache License, Version 2.0
description = Extension for colcon to support Meson packages.
keywords = colcon

[options]
install_requires =
  colcon-core
  colcon-library-path
  meson
packages = find:

[options.entry_points]
colcon_core.package_identification =
    meson = colcon_meson.identification:MesonPackageIdentification
colcon_core.task.build =
    meson = colcon_meson.build:MesonBuildTask
